; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_timeline.c_findNewestTimeLine.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_timeline.c_findNewestTimeLine.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @findNewestTimeLine(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %5 = load i64, i64* %2, align 8
  store i64 %5, i64* %3, align 8
  %6 = load i64, i64* %2, align 8
  %7 = add nsw i64 %6, 1
  store i64 %7, i64* %4, align 8
  br label %8

8:                                                ; preds = %16, %1
  %9 = load i64, i64* %4, align 8
  %10 = call i64 @existsTimeLineHistory(i64 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %8
  %13 = load i64, i64* %4, align 8
  store i64 %13, i64* %3, align 8
  br label %15

14:                                               ; preds = %8
  br label %19

15:                                               ; preds = %12
  br label %16

16:                                               ; preds = %15
  %17 = load i64, i64* %4, align 8
  %18 = add nsw i64 %17, 1
  store i64 %18, i64* %4, align 8
  br label %8

19:                                               ; preds = %14
  %20 = load i64, i64* %3, align 8
  ret i64 %20
}

declare dso_local i64 @existsTimeLineHistory(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
